--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,128 +8,136 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="LOGIN"
-        android:textColor="@color/intestazione"
-        android:textSize="24sp"
-        app:fontFamily="@font/marko_one" />
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <RadioGroup
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:checkedButton="@id/radioButton"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
-
-        <RadioButton
-            android:id="@+id/radioButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="@string/studente" />
-
-        <RadioButton
-            android:id="@+id/radioDocente"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="Docente" />
-
-    </RadioGroup>
-
-    <TableLayout
-        android:id="@+id/log_table"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
-
-        <TableRow
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="LOGIN"
+            android:textColor="@color/intestazione"
+            android:textSize="24sp"
+            app:fontFamily="@font/marko_one" />
 
-            <TextView
-                android:id="@+id/textView9"
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:checkedButton="@id/radioButton"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/radioButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Seleziona universita:" />
+                android:checked="false"
+                android:text="@string/studente" />
 
-            <Spinner
-                android:id="@+id/log_spinner"
+            <RadioButton
+                android:id="@+id/radioDocente"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="Docente" />
+
+        </RadioGroup>
+
+        <TableLayout
+            android:id="@+id/log_table"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </TableRow>
+                android:layout_height="match_parent">
 
-        <TableRow
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Seleziona universita:" />
+
+                <Spinner
+                    android:id="@+id/log_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Inserisci matricola:" />
+
+                <EditText
+                    android:id="@+id/log_matricola"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="matricola"
+                    android:importantForAutofill="no"
+                    android:inputType="textPersonName" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Inserisci password:" />
+
+                <EditText
+                    android:id="@+id/log_password"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="password"
+                    android:importantForAutofill="no"
+                    android:inputType="textPassword" />
+
+            </TableRow>
+
+        </TableLayout>
+
+        <CheckBox
+            android:id="@+id/checkRicordami"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ricordami (non dovrai più effettuare il login fino a quando ti disconnetterai)" />
+
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_layout"
+            android:shadowColor="#FFFFFF"
+            android:text="Accedi"
+            android:textColor="@color/button_text" />
+
+        <TextView
+            android:id="@+id/log_toRegistrazione"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Inserisci matricola:" />
-
-            <EditText
-                android:id="@+id/log_matricola"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="matricola"
-                android:importantForAutofill="no"
-                android:inputType="textPersonName" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Inserisci password:" />
-
-            <EditText
-                android:id="@+id/log_password"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="password"
-                android:importantForAutofill="no"
-                android:inputType="textPassword" />
-
-        </TableRow>
-
-    </TableLayout>
-
-    <CheckBox
-        android:id="@+id/checkRicordami"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ricordami (non dovrai più effettuare il login fino a quando ti disconnetterai)" />
-
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:shadowColor="#FFFFFF"
-        android:text="Accedi" />
-
-    <TextView
-        android:id="@+id/log_toRegistrazione"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal" />
-
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
