--- a/app/src/main/res/layout/activity_prenotazione_studente.xml
+++ b/app/src/main/res/layout/activity_prenotazione_studente.xml
@@ -11,15 +11,14 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    tools:context=".PrenotazioneStudenteActivity">
+                    android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/pren_nome_aula"
@@ -36,12 +35,13 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginBottom="10dp" />
+                            android:layout_marginBottom="10dp"
+                            android:layout_weight="1" />
 
                         <LinearLayout
                             android:id="@+id/linear_spinner"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:gravity="center"
                             android:orientation="horizontal"
                             android:visibility="visible">
@@ -70,7 +70,7 @@
                         <TableLayout
                             android:id="@+id/pren_tab_layout"
                             android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="10dp"
                             android:background="@drawable/layout_gruppo_complete"
